--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "money",
+  "productName": "Money Management",
   "version": "0.1.0",
   "private": true,
+  "main": "electron/main.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.5",
     "@testing-library/jest-dom": "^4.2.4",
@@ -18,11 +26,8 @@
     "react-scripts": "3.4.3",
     "typescript": "~3.8.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "electron": "^10.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
